Align expanded hamburger in mobile view correctly

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -207,7 +207,7 @@ p {
   }
 
   .menu {
-    max-width: 100%;
+    margin-left: 40%;
   }
 
 }
